@@ -1,3 +1,6 @@
+2010-01-10 gabriel
+* Add gadget view on UNG template and added script to add a gadget
+
 2010-01-07 gabriel
 * Add dialog to display the list of gadget
 
